refactor: refactored the whole search functionality and some other stuff
Refactored a lot in the search functionality to get the Application state be consistent throughout the entire application.
Also refactored the BookShelf into Books, to get the whole stuff smaler.
Added three new packages, to get the functionality that is needed.
Refactored the loader function, to get a smarter loader in search function.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "halogen": "^0.2.0",
     "prop-types": "^15.5.8",
+    "query-string": "^5.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "then-sleep": "^1.0.1"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
